--- a/readme.adoc
+++ b/readme.adoc
@@ -9,6 +9,6 @@ TIP: la documentation est aussi disponible dans les livrables du repository gith
 * Les éléments pour effectuer le lab sous forme de :
 
 ** Un projet ignite permettant de créer un cluster dans le répertoire `ignite`
-** Une série de 3 TP dans les répertoires `tp1`, `tp2` et `tp3` permettant de réaliser le lab
+** Une série de 3 TP dans les répertoires `tp1-2` et `tp3` permettant de réaliser le lab
 
 Merci de vous référez à la doculentation pour plus d'informations sur le lab.
